@@ -4,6 +4,9 @@ Changelog
 Version 1.0dev
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+- Fixed bug in path-expressions where string instances would be
+  (attempted) called. [malthe]
+
 - No longer require default namespace. [malthe]
 
 - Changed source code debug mode files to be named <filename>.py instead of
